# multiply-calculator

./: .gitignore  CMakeLists.txt  README.md  assign.cpp  assign.hpp  check.cpp  check.hpp  compute.cpp  compute.hpp  install.sh  mul.cpp  source.cpp  test.sh
scripts/: test.sh
